@@ -1,3 +1,8 @@
+2005-06-04  Tobias Schl"uter  <tobias.schlueter@physik.uni-muenchen.de>
+
+	PR fortran/16898
+	* gfortran.dg/ret_pointer_1.f90: Un-XFAIL.
+
 2005-06-04  Erik Edelmann  <erik.edelmann@iki.fi>
 
 	* gfortran.dg/array_constructor_3.f90: New test.
